# voice-invariant-bench

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  VoiceInvariantBench_walkthrough.ipynb  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  new_backend.md
.github/workflows/: ci.yml
demo/: app.py
eval/: score_predictions.py
scripts/: build_demo_data.py  finish_mvp.py  run_mvp.sh  run_phase1.sh  run_stack_matrix.sh  smoke.py  test_pipeline.py
src/: __init__.py  agents.py  asr_audit.py  augment.py  canonicalize.py  contamination_checks.py  curate.py  dialogue_plan.py  dialogue_render.py  generate.py  hardcase_miner.py  invariant_graph.py  policy_engine.py  provenance.py  row_schema.py  scenarios.py  stack_matrix.py  tts_synth.py  verify.py
tools/: calendar_api.json  reminder_api.json  retail_api.json  synthetic_transfer_api.json
